# recap.agdg.app

./: .flaskenv.example  .gitignore  app.py  database.py  main.py  pyproject.toml  recap.sql  requirements.txt  scrape.py  scraper.py
src/weeklyrecap/: __init__.py  common.py  database.py  models.py  routes.py  scraper.py
src/weeklyrecap/static/: style.css
src/weeklyrecap/templates/: archive.html  archive.html.jinja  base.html  base.html.jinja  error.html  game.html  games.html  games.html.jinja  home.html  index.html  index.html.jinja  leaderboard.html  macros.html  macros.jinja  rankings.html  view.html
static/: reset.css  style.css
templates/: archive.html  archive.html.jinja  base.html  base.html.jinja  error.html  error.html.jinja  game.html.jinja  games.html  games.html.jinja  home.html  index.html  index.html.jinja  leaderboard.html.jinja  macros.jinja  view.html  view.html.jinja
