[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weeklyrecap"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "flask",
    "pydantic-settings",
    "python-dotenv",
    "redis",
    "requests",
    "sqlalchemy",
    "urlextract",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

[tool.mypy]
strict = true
plugins = "pydantic.mypy"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
